IALERT-3674: Allow locked attribute to be set.